--- a/index.html
+++ b/index.html
@@ -8,8 +8,32 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <p>df.ajdfuadadsm,adsbl lbdlabslk dbladsbiba kjblasdbfliuagd fsbayfdvalisdbf fbalksbdf
-        fas.djnfkasjnd ,jadsbfjashdb
-    </p>
+    <form>
+        <label for="fname">First name :</label><br>
+        <input type="text" id="fname" name="fname">
+        <br>
+        <label for="mname">Middle name :</label><br>
+        <input type="text" id="mname" name="mname">
+        <br>
+        <label for="lname">Last name :</label><br>
+        <input type="text" id="lname" name="lname">
+        <br>
+        <label for="mail">Email :</label><br>
+        <input type="email" id="mail" name="mail">
+        <br>
+        <label for="pass">Password :</label><br>
+        <input type="password" id="pass" name="pass">
+        <br>
+        <label for="pass">Password :</label><br>
+        <input type="password" id="pass" name="pass">
+        <br>
+        <label for="gender"> Select the Gender :</label><br>
+        <select name="gender" id="gender"><br>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+        </select><br>
+        <label for="file"> Upload a File </label><br>
+        <input type="file" id="file">
+    </form>
 </body>
 </html>
